[#217] draft gateway